--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,11 @@
             align-items: center;
             padding: 20px;
         }
+        .socials {
+            margin-top: 10px;
+            font-size: 20px;
+            margin-top: 20px;
+        }
         body{
             font-family: Arial, sans-serif;
             margin: 20px;
